Use LockHelper for ModLauncherFactory's pending list. Should fix potential ClassNotFoundExceptions caused by threading issues. (MinecraftForge/MinecraftForge#8924) Update test scripts for SJH's updates.