@@ -6,7 +6,7 @@ dependencies {
     implementation(rootProject)
     implementation(project(':eventbus-testjars'))
     implementation('cpw.mods:modlauncher:10.0.+')
-    implementation('cpw.mods:securejarhandler:1.0.+')
+    implementation('cpw.mods:securejarhandler:2.0.+')
     implementation('org.junit.jupiter:junit-jupiter-engine:5.8.+')
     implementation('org.apache.logging.log4j:log4j-core:2.17.1')
     implementation('org.apache.logging.log4j:log4j-api:2.17.1')
@@ -18,7 +18,7 @@ dependencies {
     jmhOnly('org.openjdk.jmh:jmh-core:1.35')
     jmhOnly('org.openjdk.jmh:jmh-generator-annprocess:1.35')
     jmhOnly('cpw.mods:bootstraplauncher:1.1.0')
-    jmhOnly('cpw.mods:securejarhandler:1.0.+')
+    jmhOnly('cpw.mods:securejarhandler:2.0.+')
     jmhOnly(sourceSets.main.output)
     compileOnly('org.jetbrains:annotations:23.0.0')
     runtimeOnly('org.apiguardian:apiguardian-api:1.1.2')
@@ -32,7 +32,8 @@ task jmh(type: JavaExec, dependsOn: sourceSets.main.output) {
     jvmArgs= [
         '-p', sourceSets.main.runtimeClasspath.asPath,
         '--add-modules', 'ALL-MODULE-PATH',
-        '--add-exports', 'net.minecraftforge.eventbus.jmh/net.minecraftforge.eventbus.benchmarks.jmh_generated=jmh.core'
+        '--add-exports', 'net.minecraftforge.eventbus.jmh/net.minecraftforge.eventbus.benchmarks.jmh_generated=jmh.core',
+        '--add-opens', 'java.base/java.lang.invoke=cpw.mods.securejarhandler'
     ]
     classpath = files(configurations.jmhOnly.asPath)
     mainClass = 'org.openjdk.jmh.Main'
