@@ -4,7 +4,7 @@ dependencies {
     implementation(project(':eventbus-testjars'))
     implementation('org.junit.jupiter:junit-jupiter-api:5.8.+')
     implementation('cpw.mods:modlauncher:10.0.+')
-    implementation('cpw.mods:securejarhandler:1.0.+')
+    implementation('cpw.mods:securejarhandler:2.0.+')
     implementation('org.junit.jupiter:junit-jupiter-engine:5.8.+')
     implementation('org.apache.logging.log4j:log4j-core:2.17.1')
     implementation('cpw.mods:bootstraplauncher:1.1.0')
@@ -15,4 +15,7 @@ dependencies {
 test {
     useJUnitPlatform()
     forkEvery 1
+    jvmArgs(
+        '--add-opens', 'java.base/java.lang.invoke=cpw.mods.securejarhandler'
+    )
 }
